--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,24 +10,24 @@ editor_options:
 
 # Data
 
-  [GWAS, LD, expr_weights](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
+  [GWAS, LD, expr_weights](data.html)
   
-  [6 modality weights from Munro et al.](https://sq-96.github.io/multigroup_ctwas_analysis/data_6modality_Munro.html)
+  [6 modality weights from Munro et al.](data_6modality_Munro.html)
 
-  [Training stability weights using munro's RNA data -- FUSION pipeline](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training_fusionscale_rsqupdated.html)
+  [Training stability weights using munro's RNA data -- FUSION pipeline](data_weight_training_fusionscale_rsqupdated.html)
   
-  [Training stability weights using munro's RNA data -- FUSION pipeline, use top qtl for non-cs genes](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training_fusionscale_rsqupdated_allhaveqtl.html)
+  [Training stability weights using munro's RNA data -- FUSION pipeline, use top qtl for non-cs genes](data_weight_training_fusionscale_rsqupdated_allhaveqtl.html)
 
 
 ## Deciding weights  
   
   Comparing results from Munro weights & predictdb weights
   
-  * [IBD: predictdb eQTL + sQTL VS Munro 6 modalities -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated_cs_thin1.html)
-  * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update_thin1.html)
-  * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / all 8 weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_decidingweights_4traits.html) 
-  * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / predictdb eQTL + sQTL + Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_decidingweights_4traits_ess.html) 
-  * [Enrichment analysis using fractional models, for IBD, LDL, SBP, WBC + predictdb eQTL + sQTL /  predictdb eQTL + sQTL + Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/fractional_enrichment.html) 
+  * [IBD: predictdb eQTL + sQTL VS Munro 6 modalities -- thin method V1](multi_group_compare_predictdb_munro_updated_cs_thin1.html)
+  * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V1](multi_group_compare_predictdb_munro_4weights_8weights_update_thin1.html)
+  * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / all 8 weights](multi_group_compare_decidingweights_4traits.html) 
+  * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / predictdb eQTL + sQTL + Munro stQTL](multi_group_compare_decidingweights_4traits_ess.html) 
+  * [Enrichment analysis using fractional models, for IBD, LDL, SBP, WBC + predictdb eQTL + sQTL /  predictdb eQTL + sQTL + Munro stQTL](fractional_enrichment.html) 
 
 # cTWAS epigenetics results
   * [cTWAS epigenetic analysis](ctwas_epigenetic_analysis.html)
@@ -61,10 +61,14 @@ Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue re
 Data analysis
 
 * [Summary for parameters, number of genes in single/multigroup analysis, heatmap for new genes](realdata_final_multigroup_summary.html)
+* [Gene functions](realdata_final_genefunctions.html)
 
 Enrichment analysis
 
 * [Comparing enriched terms found by fractional model/enrichR for multigroup&singlegroup](realdata_final_downstream_enrichment_compare.html)
+
+
+
 
 
 ## Omics
@@ -78,12 +82,12 @@ Enrichment analysis
 
 Package V1.0
 
-  * APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
-  * histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
+  * APA QTL analysis [link](apa_weights_analysis.html)
+  * histone QTL analysis [link](histone_weights_analysis.html)
   
 Package V2.0
 
-  * [APA QTL analysis (using APA FUSION models by Chen et al.)](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis_chenetal.html)
+  * [APA QTL analysis (using APA FUSION models by Chen et al.)](apa_weights_analysis_chenetal.html)
 
 
 ## Tissues
@@ -92,15 +96,15 @@ Package V2.0
 
 Package V1.0
 
-  * [Deciding the matching tissue -- by gene numbers](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
+  * [Deciding the matching tissue -- by gene numbers](matching_tissue.html)
   
 Package V2.0
 
-  * [Deciding the matching tissue -- by gene numbers](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue_v2.html)
-  * [Deciding the matching tissue -- %h2g adaptive method](https://sq-96.github.io/multigroup_ctwas_analysis/tissue_selection_extra_tissue.html)
-  * [Deciding the matching tissue -- run ctwas using all tissues, round1](https://sq-96.github.io/multigroup_ctwas_analysis/real_data_all_tissues.html)
-  * [Deciding the matching tissue -- run ctwas using all tissues, G-tests](https://sq-96.github.io/multigroup_ctwas_analysis/GWAS_tissue_selection.html)
-  * [Deciding the matching tissue -- run ctwas using all tissues, G-tests, scatter plots added](https://sq-96.github.io/multigroup_ctwas_analysis/GWAS_tissue_selection_v2.html)
+  * [Deciding the matching tissue -- by gene numbers](matching_tissue_v2.html)
+  * [Deciding the matching tissue -- %h2g adaptive method](tissue_selection_extra_tissue.html)
+  * [Deciding the matching tissue -- run ctwas using all tissues, round1](real_data_all_tissues.html)
+  * [Deciding the matching tissue -- run ctwas using all tissues, G-tests](GWAS_tissue_selection.html)
+  * [Deciding the matching tissue -- run ctwas using all tissues, G-tests, scatter plots added](GWAS_tissue_selection_v2.html)
 
 Finalized package
 
@@ -118,10 +122,10 @@ Tissue filtered by sample size, irrelevant tissues filtered out
 
 Package V1.0
 
-  * [Multi-tissue analysis, merging the LD blocks](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge.html)
-  * [Validation](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_validation.html)
-  * [Enrichment analysis -- enriched pathways](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_enriched_pwy.html)
-  * LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
+  * [Multi-tissue analysis, merging the LD blocks](multi_tissue_ldmerge.html)
+  * [Validation](multi_tissue_ldmerge_validation.html)
+  * [Enrichment analysis -- enriched pathways](multi_tissue_ldmerge_enriched_pwy.html)
+  * LDL ten tissues analysis [link](LDL_ten_tissues.html)
   
 Package V2.0
 
@@ -130,22 +134,22 @@ Package V2.0
 
   package v1.0
 
-  * LDL - Liver and Adipose - Expression and Splicing [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_Liver_Adipose_E_S.html)
-  * LDL - Multi contexts/types [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_multi_context_type.html)
+  * LDL - Liver and Adipose - Expression and Splicing [link](LDL_Liver_Adipose_E_S.html)
+  * LDL - Multi contexts/types [link](LDL_multi_context_type.html)
   
   package v2.0
   
-  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- load predicdb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights.html)
-  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb.html)
-  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_summary.html)
-  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro.html)
-  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro_summary.html)
-  * [6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing undo](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ess.html)
-  * [6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ess_postprocessing.html)
-  * [6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing, comparing 2 LD mismatch approaches, problematic genes filtered by PIP & z score](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ess_postprocessing_compare_pipz.html)
-  * [6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing, comparing 2 LD mismatch approaches, problematic genes filtered by PIP only](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ess_postprocessing_compare_nozfilter.html)
-  * [Enrichment analysis for 6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing undo](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ess_enrichment_genesymbol.html)
-  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ess_summary.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- load predicdb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](multi_group_6traits_15weights.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](multi_group_6traits_15weights_ukbb.html)
+  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](multi_group_6traits_15weights_ukbb_summary.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](multi_group_6traits_15weights_ukbb_munro.html)
+  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](multi_group_6traits_15weights_ukbb_munro_summary.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing undo](multi_group_6traits_15weights_ess.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing](multi_group_6traits_15weights_ess_postprocessing.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing, comparing 2 LD mismatch approaches, problematic genes filtered by PIP & z score](multi_group_6traits_15weights_ess_postprocessing_compare_pipz.html)
+  * [6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing, comparing 2 LD mismatch approaches, problematic genes filtered by PIP only](multi_group_6traits_15weights_ess_postprocessing_compare_nozfilter.html)
+  * [Enrichment analysis for 6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing undo](multi_group_6traits_15weights_ess_enrichment_genesymbol.html)
+  * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al](multi_group_6traits_15weights_ess_summary.html)
   
 ## Comparing with other methods
 
@@ -163,7 +167,7 @@ Package V2.0
 
 ### Region Merge
 
-  * Test region merge [link](https://sq-96.github.io/multigroup_ctwas_analysis/region_merge_test.html)
+  * Test region merge [link](region_merge_test.html)
 
 ## Downstream analysis
   
@@ -174,20 +178,20 @@ Package V2.0
 
 ctwas settings
 
-* [Comparing ctwas running setting: %h2g/gene number/silver standard/go terms -- munro st only](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings.html)
-* [Comparing ctwas running setting: %h2g/gene number/silver standard/go terms -- susie st added](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_susieST.html)
+* [Comparing ctwas running setting: %h2g/gene number/silver standard/go terms -- munro st only](comparing_differnt_settings.html)
+* [Comparing ctwas running setting: %h2g/gene number/silver standard/go terms -- susie st added](comparing_differnt_settings_susieST.html)
 
 
 QTL settings
 
-* [Comparing susie & munro st: parameters only](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_munro_susie_st.html)
-* [Comparing with susie st & apa model](https://sq-96.github.io/multigroup_ctwas_analysis/parameters_apa_li.html)
-* [RNA editing QTLs](https://sq-96.github.io/multigroup_ctwas_analysis/edqtl.html)
+* [Comparing susie & munro st: parameters only](comparing_munro_susie_st.html)
+* [Comparing with susie st & apa model](parameters_apa_li.html)
+* [RNA editing QTLs](edqtl.html)
 
 postprocessing settings
 
-* [Comparing ld-mismatch setting](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_ldmm.html)
-* [CS filtering or not](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_csindex.html)
+* [Comparing ld-mismatch setting](comparing_differnt_settings_ldmm.html)
+* [CS filtering or not](comparing_differnt_settings_csindex.html)
   
   
   
@@ -196,13 +200,13 @@ postprocessing settings
 
 package v2.0
 
-* [Predictdb sQTL from Liver](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_predictdb_sQTL.html)
-* [Predictdb eQTL&sQTL from Liver](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_predictdb_esQTL.html)
-* [Comparing single-group & multi-group for LDL – old PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare_oldpip.html)
-* [Comparing single-group & multi-group for LDL - new PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare.html)
-* [Comparing different PIP combining functions](https://sq-96.github.io/multigroup_ctwas_analysis/compare_pip_func_LDL.html)
-* [New tissues comparing LD mismatch](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_newtissue_example.html)
-* [Downstream analysis, predictdb eQTL, sQTL, Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_silver_standard.html)
+* [Predictdb sQTL from Liver](LDL_predictdb_sQTL.html)
+* [Predictdb eQTL&sQTL from Liver](LDL_predictdb_esQTL.html)
+* [Comparing single-group & multi-group for LDL – old PIP combining function](LDL_single_multi_compare_oldpip.html)
+* [Comparing single-group & multi-group for LDL - new PIP combining function](LDL_single_multi_compare.html)
+* [Comparing different PIP combining functions](compare_pip_func_LDL.html)
+* [New tissues comparing LD mismatch](LDL_newtissue_example.html)
+* [Downstream analysis, predictdb eQTL, sQTL, Munro stQTL](LDL_silver_standard.html)
 
 
 
@@ -213,9 +217,9 @@ package v2.0
 
 # Old simulation results
 
-  * seven uncorrelated tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_tissues_uncorrelated.html)
-  * seven correlated tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_tissues_correlated.html)
-  * seven correlated brain tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_seven_brain_tissues_correlated.html)
-  * Single weight simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/single_weight_simulations.html)
-  * Four expression traits simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/four_expression_traits_simulations.html)
-  * E and S three tissues simulations [link](https://sq-96.github.io/multigroup_ctwas_analysis/simulation_E_S_three_tissues_new.html)
+  * seven uncorrelated tissues simulations [link](simulation_seven_tissues_uncorrelated.html)
+  * seven correlated tissues simulations [link](simulation_seven_tissues_correlated.html)
+  * seven correlated brain tissues simulations [link](simulation_seven_brain_tissues_correlated.html)
+  * Single weight simulations [link](single_weight_simulations.html)
+  * Four expression traits simulations [link](four_expression_traits_simulations.html)
+  * E and S three tissues simulations [link](simulation_E_S_three_tissues_new.html)
