--- a/analysis/realdata_final_genefunctions.Rmd
+++ b/analysis/realdata_final_genefunctions.Rmd
@@ -15,24 +15,102 @@ https://sq-96.github.io/multigroup_ctwas_analysis/realdata_final_multigroup_summ
 
 LDLR, PCSK9, CETP, CCNJ, PKN3, APOC1, ABCA8, FCGRT, DNAJC13, LRCH4, HMGCR, ASGR1, APOB, FLT3, ADH1B, ZDHHC18, USP39, TIMD4, ZFYVE1, NPC1L1, ERGIC3, ACP6, MITF, PSRC1, SNX17, GABBR1, KIF13B, R3HDM2, SIPA1, FAM117B, PGS1, MYPOP, USP3, ADRB1, WASHC4, PHC1, TPD52, THOP1, ZFP28, PDE4C, XPNPEP3, DMTN, SEPT2
 
-Genes with Strong Evidence of Association with LDL Cholesterol
+Genes with Strong Evidence of Association with LDL Cholesterol:
 
 LDLR (Low-Density Lipoprotein Receptor): Mutations in LDLR are a primary cause of familial hypercholesterolemia, leading to elevated LDL cholesterol levels due to impaired clearance of LDL particles from the bloodstream.
 
-
 <figure class="half">
-    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/LDLR.png" width="150%">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/LDLR.png" width="150%">
 </figure>
-
-APOB (Apolipoprotein B): APOB encodes the primary protein component of LDL particles. Mutations can impair LDL binding to its receptor, resulting in elevated LDL cholesterol levels.
 
 PCSK9 (Proprotein Convertase Subtilisin/Kexin Type 9): PCSK9 regulates LDL receptor degradation. Gain-of-function mutations increase LDL cholesterol levels, while loss-of-function mutations are associated with reduced LDL cholesterol and a lower risk of coronary heart disease.
 
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/PCSK9.png" width="150%">
+</figure>
+
+
+APOB (Apolipoprotein B): APOB encodes the primary protein component of LDL particles. Mutations can impair LDL binding to its receptor, resulting in elevated LDL cholesterol levels.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/APOB.png" width="150%">
+</figure>
+
+
 CETP (Cholesteryl Ester Transfer Protein): CETP facilitates the transfer of cholesteryl esters from HDL to LDL and VLDL particles. Variants in CETP can influence HDL and LDL cholesterol levels.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/CETP.png" width="150%">
+</figure>
+
 HMGCR (3-Hydroxy-3-Methylglutaryl-CoA Reductase): This enzyme is the rate-limiting step in cholesterol biosynthesis and is the target of statin therapy. Variants in HMGCR can affect LDL cholesterol levels.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/HMGCR.png" width="150%">
+</figure>
+
 NPC1L1 (Niemann-Pick C1-Like 1): NPC1L1 is critical for intestinal cholesterol absorption. Inhibitors like ezetimibe target this protein to reduce LDL cholesterol levels.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/NPC1L1.png" width="150%">
+</figure>
+
 ASGR1 (Asialoglycoprotein Receptor 1): Loss-of-function mutations in ASGR1 have been associated with reduced LDL cholesterol levels and a lower risk of coronary artery disease.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/ASGR1.png" width="150%">
+</figure>
+
 APOC1 (Apolipoprotein C1): APOC1 modulates lipoprotein metabolism and has been linked to variations in LDL cholesterol levels.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/APOC1.png" width="150%">
+</figure>
+
 PSRC1 (Proline and Serine Rich Coiled-Coil 1): Variants near PSRC1 have been linked to LDL cholesterol levels in genome-wide association studies (GWAS).
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/PSRC1.png" width="150%">
+</figure>
+
 TIMD4 (T-cell Immunoglobulin and Mucin Domain Containing 4): Variants in TIMD4 have been associated with decreased serum triglyceride levels and a reduced risk of coronary heart disease and ischemic stroke in certain populations.
 
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/multi/TIMD4.png" width="150%">
+</figure>
+
+
+## Genes reported by single eQTL analysis but not by multi-group analysis
+
+Genes with No Strong or Established Evidence for LDL Association
+
+DDX56 RNA helicase with roles in ribosome biogenesis; no known links to lipid metabolism or LDL levels.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/single/DDX56.png" width="150%">
+</figure>
+
+
+ASAP3 Involved in cytoskeletal organization; no direct evidence for LDL-related roles.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/single/ASAP3.png" width="150%">
+</figure>
+
+MZF1 A transcription factor; not directly linked to lipid or cholesterol traits.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/single/MZF1.png" width="150%">
+</figure>
+
+VIL1 Villin 1, an actin-binding protein in the intestinal brush border; no direct LDL link known.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/single/VIL1.png" width="150%">
+</figure>
+
+WBP1L Not currently known to be involved in lipid metabolism or LDL levels.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/LDL-ukb-d-30780_irnt/single/WBP1L.png" width="150%">
+</figure>
