--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -41,7 +41,29 @@ editor_options:
 
 # Real data application
 
-## Real data final round 05/14/2025
+
+## Real data final round 06/03/2025, e + s + st QTLs
+
+### Exploring genetic architecture
+
+[LDL, IBD: different qtl combination](realdata_final_combine_qtls_3qtls.html)
+
+### Tissue selection
+
+Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue removed from non-psychiatric traits
+
+* [sQTL - some tissues removed](realdata_final_tissueselection_mingene0_splicing_exclude_brainprocessed.html)
+* [Summary](realdata_final_tissueselection_mingene0_summary.html)
+
+### Multi group analysis results
+
+Data analysis
+
+* [Summary for parameters, number of genes in single/multigroup analysis, heatmap for new genes](realdata_final_multigroup_summary_3qtls.html)
+* [Gene functions](realdata_final_genefunctions_3qtls.html)
+
+
+## Real data final round 05/14/2025 , e + s + st + ed QTLs
 
 ### Exploring genetic architecture
 
