--- a/analysis/realdata_final_genefunctions.Rmd
+++ b/analysis/realdata_final_genefunctions.Rmd
@@ -15,7 +15,7 @@ https://sq-96.github.io/multigroup_ctwas_analysis/realdata_final_multigroup_summ
 
 LDLR, PCSK9, CETP, CCNJ, PKN3, APOC1, ABCA8, FCGRT, DNAJC13, LRCH4, HMGCR, ASGR1, APOB, FLT3, ADH1B, ZDHHC18, USP39, TIMD4, ZFYVE1, NPC1L1, ERGIC3, ACP6, MITF, PSRC1, SNX17, GABBR1, KIF13B, R3HDM2, SIPA1, FAM117B, PGS1, MYPOP, USP3, ADRB1, WASHC4, PHC1, TPD52, THOP1, ZFP28, PDE4C, XPNPEP3, DMTN, SEPT2
 
-Genes with Strong Evidence of Association with LDL Cholesterol:
+**Genes with Strong Evidence of Association with LDL Cholesterol**
 
 LDLR (Low-Density Lipoprotein Receptor): Mutations in LDLR are a primary cause of familial hypercholesterolemia, leading to elevated LDL cholesterol levels due to impaired clearance of LDL particles from the bloodstream.
 
@@ -82,7 +82,9 @@ TIMD4 (T-cell Immunoglobulin and Mucin Domain Containing 4): Variants in TIMD4 h
 
 ## Genes reported by single eQTL analysis but not by multi-group analysis
 
-Genes with No Strong or Established Evidence for LDL Association
+PARP9，DDX56，ASAP3，MZF1，CLDN23，FUT2，VIL1，KLHDC7A，WBP1L  
+
+**Genes with No Strong or Established Evidence for LDL Association**
 
 DDX56 RNA helicase with roles in ribosome biogenesis; no known links to lipid metabolism or LDL levels.
 
