--- a/analysis/realdata_final_multigroup_summary_3qtls.Rmd
+++ b/analysis/realdata_final_multigroup_summary_3qtls.Rmd
@@ -21,8 +21,9 @@ source("/project/xinhe/xsun/multi_group_ctwas/data/samplesize.R")
 
 trait_nopsy <- c("LDL-ukb-d-30780_irnt","IBD-ebi-a-GCST004131","aFib-ebi-a-GCST006414","SBP-ukb-a-360",
                  "T1D-GCST90014023","T2D-panukb","ATH_gtexukb","BMI-panukb","HB-panukb",
-                 "Height-panukb","HTN-panukb","PLT-panukb","RA-panukb","RBC-panukb",
-                 "WBC-ieu-b-30")
+                 "Height-panukb","HTN-panukb","PLT-panukb","RA-panukb","RBC-panukb"#,
+                 # "WBC-ieu-b-30"
+                 )
 trait_psy <- c("SCZ-ieu-b-5102","ASD-ieu-a-1185","BIP-ieu-b-5110","MDD-ieu-b-102","PD-ieu-b-7",
                "ADHD-ieu-a-1183","NS-ukb-a-230")
 traits <- c(trait_nopsy,trait_psy)
