--- a/analysis/realdata_final_multigroup_examine_results_3qtls.Rmd
+++ b/analysis/realdata_final_multigroup_examine_results_3qtls.Rmd
@@ -2,9 +2,10 @@
 title: "Examining the results from multi-group analysis"
 author: "XSun"
 date: "2025-06-05"
-output: workflowr::wflow_html
-editor_options:
-  chunk_output_type: console
+output:
+  workflowr::wflow_html:
+    code_folding: hide
+    toc: true
 ---
 
 # Introduction
@@ -66,6 +67,8 @@ plot_finemap_data <- function(data, trait, problematic_genes = NULL, alpha = 0.4
 
 ```
 
+# Diagnosis plots
+
 ```{r fig.height=6, fig.width=12}
 
 for (trait in traits){
@@ -114,3 +117,12 @@ for (trait in traits){
 
 
 ```
+
+# Examples 
+
+## IBD-ebi-a-GCST004131
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_exam/IBD-ebi-a-GCST004131/6_31603441_32714887.png" width="150%">
+</figure>
+
