--- a/analysis/realdata_final_genefunctions.Rmd
+++ b/analysis/realdata_final_genefunctions.Rmd
@@ -13,7 +13,7 @@ https://sq-96.github.io/multigroup_ctwas_analysis/realdata_final_multigroup_summ
 
 ## New genes identified by multi-group 
 
-LDLR, PCSK9, CETP, CCNJ, PKN3, APOC1, ABCA8, FCGRT, DNAJC13, LRCH4, HMGCR, ASGR1, APOB, FLT3, ADH1B, ZDHHC18, USP39, TIMD4, ZFYVE1, NPC1L1, ERGIC3, ACP6, MITF, PSRC1, SNX17, GABBR1, KIF13B, R3HDM2, SIPA1, FAM117B, PGS1, MYPOP, USP3, ADRB1, WASHC4, PHC1, TPD52, THOP1, ZFP28, PDE4C, XPNPEP3, DMTN, SEPT2
+LDLR, PCSK9, CETP, CCNJ, PKN3, APOC1, ABCA8, FCGRT, DNAJC13, LRCH4, HMGCR, ASGR1, APOB, FLT3, ADH1B, ZDHHC18, USP39, TIMD4, ZFYVE1, NPC1L1, ERGIC3, ACP6, MITF, PSRC1, SNX17, GABBR1, KIF13B, R3HDM2, SIPA1, FAM117B, PGS1, MYPOP, USP3, ADRB1, WASHC4, PHC1, TPD52, THOP1, ZFP28, PDE4C, XPNPEP3, DMTN, SEPT2.
 
 **Genes with Strong Evidence of Association with LDL Cholesterol**
 
