--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -60,12 +60,14 @@ Tissue filtered by sample size, irrelevant tissues filtered out, brian tissue re
 Data analysis
 
 * [Summary for parameters, number of genes in single/multigroup analysis, heatmap for new genes](realdata_final_multigroup_summary_3qtls.html)
-* [Gene functions](realdata_final_genefunctions_3qtls.html)
+* [Diagnosis](realdata_final_multigroup_examine_results_3qtls.html)
+* [Gene functions](realdata_final_genefunctions.html)
 
 Validation
 
 * [Overlap with silver standard genes](realdata_final_multigroup_validation_silver_3qtls.html)
 * [Weighted pathway-based gene set enrichment](realdata_final_multigroup_validation_weighted_pwy_3qtls.html)
+
 
 ## Real data final round 05/14/2025 , e + s + st + ed QTLs
 
