--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -67,7 +67,7 @@ Validation
 
 * [Overlap with silver standard genes](realdata_final_multigroup_validation_silver_3qtls.html)
 * [Weighted pathway-based gene set enrichment](realdata_final_multigroup_validation_weighted_pwy_3qtls.html)
-
+* [Enrichment analysis using chatgpt](realdata_final_downstream_enrichment_chatgpt.html)
 
 ## Real data final round 05/14/2025 , e + s + st + ed QTLs
 
