--- a/analysis/realdata_final_genefunctions.Rmd
+++ b/analysis/realdata_final_genefunctions.Rmd
@@ -159,3 +159,45 @@ WBP1L Not currently known to be involved in lipid metabolism or LDL levels.
 <figure class="half">
     <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/LDL-ukb-d-30780_irnt/single/WBP1L.png" width="150%">
 </figure>
+
+
+
+# SBP-ukb-a-360
+
+## New genes identified by multi-group
+
+BAG6, PKN2, PKP4, ENPEP, FES, RERE, NUDT5, RAB34, SLC9A3R2, TMBIM1, HOXA11, DMWD, UVSSA, TMEM175, MTMR9, ADH1B, SP140L, PPP3R1, NAA60, CCDC163, FHOD3, SGSM3, NPR1, PAQR5, CLCN6, THAP3, CAMK1D, TBX2, FBXO38, REXO1
+
+**Genes with Evidence of Association with systolic blood pressure**
+
+ENPEP: A GWAS in East Asians identified genome-wide significant SBP associations at the ENPEP locus.
+Kidney transcriptome and protein-level Mendelian randomisation linked genetically predicted ENPEP expression to elevated SBP/DBP/PP 
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/SBP-ukb-a-360/multi/ENPEP.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/SBP-ukb-a-360/multi/ENPEP.png" width="150%">
+</figure>
+
+
+NPR1 Rare/low-frequency coding variants show association with SBP in >300k sample-size meta-analyses. It encodes the receptor for atrial/brain natriuretic peptides, central in blood volume and BP regulation
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/SBP-ukb-a-360/multi/NPR1.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/SBP-ukb-a-360/multi/NPR1.png" width="150%">
+</figure>
+
+FES A TWAS reported inverse association between predicted FES expression in vascular tissues and SBP
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/SBP-ukb-a-360/multi/FES.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/SBP-ukb-a-360/multi/FES.png" width="150%">
+</figure>
